version/0.4.0b2/_sources/user_guide/index.rst.txt
User guide
----------

This section explains how to connect to PySAM SysML2, work with models and diagrams, and find
required information.

.. only:: html

    .. grid:: 2

        .. grid-item-card:: Use a connector :fa:`plug`
            :link: api/create-conn
            :link-type: doc

            Explains how to use a connector, which is the interface between PySAM SysML2 and the
            SysML V2 server.

        .. grid-item-card:: Approaches dynamic and static :fa:`exchange`
            :link: api/approaches
            :link-type: doc

            Explains what are the differences between the dynamic approach and the static approach, and when to use each of them.

.. only:: html

    .. grid:: 2

        .. grid-item-card:: Manage projects :fa:`folder-open`
            :link: api/manage-projects
            :link-type: doc

            Explains how to create, update, and delete projects on the server.

        .. grid-item-card:: Load a model :fa:`cloud-download`
            :link: api/load-model
            :link-type: doc

            Explains how to load a model from the SysML V2 server.

.. only:: html

    .. grid:: 2

        .. grid-item-card:: Read your model :fa:`book`
            :link: api/read-model
            :link-type: doc

            Explains how to read and parse your model.

        .. grid-item-card:: Write data to your model :fa:`pencil`
            :link: api/write-model
            :link-type: doc

            Explains how to write and publish in your model.

.. only:: html

    .. grid:: 2

        .. grid-item-card:: Work with diagrams :fa:`project-diagram`
            :link: api/diagram-model
            :link-type: doc

            Explains how to download and explore diagrams.

        .. grid-item-card:: Find required information :fa:`info-circle`
            :link: api/information
            :link-type: doc

            Explains how to find required information, such as organization IDs and tokens.

.. toctree::
   :maxdepth: 7
   :hidden:

   api/create-conn
   api/approaches
   api/manage-projects
   api/load-model
   api/read-model
   api/write-model
   api/diagram-model
   api/information
